changed name package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dracula_soft_modified",
+  "name": "modified-dracula-soft",
   "displayName": "Modified Dracula Soft Theme",
   "description": "A modified version of the Dracula Soft Theme",
   "version": "1.0.0",
