--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "color": "#343746",
     "theme": "dark"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/PetitLu117/Modified-Dracula-Soft-Theme.git"
+  },
   "contributes": {
     "themes": [
       {
         "label": "Dracula Soft Modified",
         "uiTheme": "vs-dark",
-        "path": "./themes/myTheme-color-theme.json"
+        "path": "./theme/dracula_soft_modified.json"
       }
     ]
   }
