--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
 		"publisherId": "7835cf88-fc2d-4292-93bb-6130c27f2165",
 		"publisherDisplayName": "PetitLu117",
 		"targetPlatform": "undefined",
-		"updated": false,
+		"updated": true,
 		"isPreReleaseVersion": false,
 		"hasPreReleaseVersion": false,
-		"installedTimestamp": 1710909572379,
-		"pinned": false
+		"installedTimestamp": 1710911100683,
+		"pinned": false,
+		"isApplicationScoped": false,
+		"preRelease": false
 	}
 }
