--- a/package.json
+++ b/package.json
@@ -28,16 +28,14 @@
 		]
 	},
 	"__metadata": {
-		"id": "6bc97f45-e0d0-4b2f-938d-9fb357c6eb7b",
+		"id": "0c20c1b6-dc2e-4a15-8c6f-06b97b4b4231",
 		"publisherId": "7835cf88-fc2d-4292-93bb-6130c27f2165",
 		"publisherDisplayName": "PetitLu117",
 		"targetPlatform": "undefined",
-		"updated": true,
+		"updated": false,
 		"isPreReleaseVersion": false,
 		"hasPreReleaseVersion": false,
-		"installedTimestamp": 1710911100683,
-		"pinned": false,
-		"isApplicationScoped": false,
-		"preRelease": false
+		"installedTimestamp": 1710936331437,
+		"pinned": false
 	}
 }
